# Rust-MCP-Server

./: .gitignore  CHANGELOG-zh.md  CHANGELOG.md  CONTRIBUTING-zh.md  CONTRIBUTING.md  Cargo.toml  README-zh.md  README.md  build.rs
.cargo/: config.toml
assets/vc-ltl/x64/: libvcruntime.lib  vcruntime.lib
assets/vc-ltl/x86/: libvcruntime.lib  vcruntime.lib
docs/: api-zh.md  api.md  architecture-zh.md  architecture.md  security-zh.md  security.md  user-guide-zh.md  user-guide.md
scripts/: build-unix.sh  build-windows.bat
src/: config.rs  main.rs
src/mcp/: handler.rs  mod.rs  presets.rs  state.rs
src/mcp/tools/: archive.rs  ask_user.rs  base64_codec.rs  bash.rs  calculator.rs  clipboard.rs  datetime.rs  diff.rs  dir_list.rs  edit.rs  env_get.rs  execute_command.rs  execute_python.rs  file_edit.rs  file_ops.rs  file_read.rs  file_search.rs  file_stat.rs  file_write.rs  git_ops.rs  glob.rs  grep.rs  hash_computer.rs  http_request.rs  image_read.rs  json_query.rs  mod.rs  monitor.rs  note_storage.rs  notebook_edit.rs  path_exists.rs  process_list.rs  read.rs  system_info.rs  task.rs  web_fetch.rs  web_search.rs  write.rs
src/utils/: async_command.rs  enhanced_glob.rs  file_utils.rs  http_utils.rs  image_utils.rs  mod.rs  office_converter.rs  office_utils.rs  system_metrics.rs  windows_version.rs
src/web/: handlers.rs  mod.rs
src/web/static/: index.html  script.js  style.css
