[package]
name = "rust-mcp-server"
version = "0.2.0"
edition = "2021"
authors = ["MCP Server Team"]
description = "A high-performance MCP server with WebUI control panel"
license = "GPL-3.0"
repository = "https://github.com/yuunnn-w/Rust-MCP-Server"

[dependencies]
# MCP SDK
rmcp = { version = "1.5.0", features = ["server", "client", "transport-streamable-http-server", "transport-streamable-http-client", "transport-streamable-http-client-reqwest", "macros"] }

# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web framework
axum = { version = "0.8", features = ["http1", "tokio", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
tower-service = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
schemars = { version = "1.1", features = ["chrono04"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Static file embedding
rust-embed = { version = "8.5", features = ["mime-guess"] }
mime_guess = "2.0"

# Concurrency and collections
dashmap = "6.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Encoding
base64 = "0.22"

# Cryptography
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"

# System info
sysinfo = "0.33"
get_if_addrs = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regular expressions
regex = "1.11"

# URL parsing
url = "2.5"

# Stream handling
tokio-stream = "0.1"
futures = "0.3"
async-stream = "0.3"

[build-dependencies]
winresource = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.16"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true


